app/app.css
/* ... */
@font-face {
  font-family: "Sifon";
  src: local("SIFONN_PRO"),
    url(/SIFONN_PRO.otf) format("opentype");
    font-display: swap;
    font-style: normal;
}

/* @font-face {
  font-family: "Placard";
  src: local("Placard-WideLight"), url(/PlacardNext-WideLight.otf) format("opentype");
  font-weight: light;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Placard";
  src: local("Placard-Wide"), url(/PlacardNext-Wide.otf) format("opentype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
} */

body {
  background: linear-gradient(to right, #d6d1c9, #bdb7ae);
  margin: 0;
  padding: 0;
}

/** text */
p {
  font-family: "Onest", sans-serif;
  margin: 0px;
  font-size: 14pt;
  line-height: 1.5;
  font-weight: 400 !important;
  color: var(--txt);
}

h1 {
  font-family: "Onest", sans-serif;
  font-weight: 200;
  margin: 0;
  text-align: start;
  font-size: 60pt;
  line-height: 1.2;
  color: var(--accent);
}

h2 {
  font-family: "Onest", sans-serif;
  font-weight: 200;
  margin: 0;
  text-align: start;
  font-size: 40pt;
  line-height: 1.2;
  color: var(--accent);
}

h3 {
  font-family: "Onest",sans-serif;
  text-align: start;
  line-height: 1.5;
  font-size: 14pt;
  margin: 0;
  color: var(--txt);
}

h4 {
  font-family: 'Onest', sans-serif;
  font-weight: lighter;
  padding: 0;
  margin: 0;
  font-size: 30pt;
  line-height: 1.5;
  color: var(--accent);
}

h5 {
  font-family: "Onest", sans-serif;
  padding: 0;
  margin: 0;
  font-size: 15pt;
  font-weight: bold;
  line-height: 1.5;
  color: var(--bkg);
}

#logo-title-text {
  font-family: "Sifon", sans-serif;
  text-align: start;
  color: var(--txt);
  font-weight: 700;
  font-size: 60pt;
  line-height: 1;

  margin: 0;
}

ul {
    font-size: 14pt;

  padding: 20px;
  margin: 0;
}

li {
  font-size: 14pt;
  font-family: "Onest", sans-serif;
  text-align: start;
  margin-bottom: 10pt;
}

label {
  font-family: "Onest", sans-serif;
  text-align: start !important;
  justify-content: start;
  font-size: 10pt !important;
}

img {
  border-radius: var(--borderRadius);
  flex-shrink: 0;
}

a {
  font-size: 14pt;
}

/********* Basic elements ***********/
input {
  font-family: "Onest", sans-serif;
  color: var(--txt);
  font-size:  1rem;
  background: var(--bkg);
  height: 50px;
  height: 3em;

  border: 1px solid var(--accent-lg);
  border-radius: var(--borderRadius);

  text-indent: 10px;
  padding: 0;
  margin: 0;

  width: 100%;

  transition: 0.25s;
}

input:focus {
  outline: none;
  color: var(--txt);
  box-shadow: 0 0 0px 3px var(--accent) inset;

  background-color: var(--bkg);
  transition: 0.25s;
}

input:disabled {
  color: var(--txt);
  background-color: var(--accent-md);
}

textarea {
  font-family: "Onest", sans-serif;
  color: var(--txt);
  font-size:  1rem;
  background: var(--bkg);
  height: 3em;

  border: 1px solid var(--accent-lg);
  border-radius: var(--borderRadius);
  padding: 0;
  margin: 0;

  width: 100%;

  transition: 0.25s;
}

textarea:focus {
  outline: none;
  color: var(--txt);
  box-shadow: 0 0 0px 3px var(--accent) inset;

  background-color: var(--bkg);
  transition: 0.25s;
}

.danger {
  box-shadow: 3px 3px 0px 1px var(--dangerColor);
}

input {
  font-family: "Onest", sans-serif;
  color: var(--txt);
  background: var(--bkg);
  height: 50px;

  border: 1px solid var(--accent-lg);
  border-radius: var(--borderRadius);

  text-indent: 10px;
  padding: 0;
  margin: 0;

  width: 100%;

  transition: 0.25s;
}

button {
  font-family: "Onest", sans-serif;
  font-weight: light;
  color: var(--txt);
  font-weight: 500;
  font-size: 14pt;
  text-wrap: "wrap";
  border-radius: var(--borderRadius);
  line-height: 1.2em;

  background-color: var(--primaryGradient);
  padding: 10px;
  margin: 0;

  cursor: pointer;

  border: none;
  transition: 0.5s;
}

button:hover {
  color: var(--accent);
  transition: 0.2s;
  transform: translateY(2px);
}

button:disabled {
  cursor: auto;
  opacity: 50%;
}

.accentButton {
  border-radius: var(--borderRadius);
  background: var(--accent);
  color: var(--bkg);
}

.accentButton * {
  color: var(--bkg);
}

.accentButton:hover {
  background-color: var(--accent-lg);
  color: var(--bkg) !important;
  transform: translateY(2px);
}

button:hover * {
  color: var(--accent);
  transition: 0.2s;
}

.accentButton:disabled {
  background: var(--bkg);
  color: var(--txt);
}

.dangerButton {
  background-color: var(--dangerColor);
  color: #111111;
}

.safeButton {
  background-color: var(--safeColor);
  color: #111111;
}

.warningButton {
  background-color: var(--warningColor);
  color: #111111;
}

.lightButton {
  color: var(--bkg);
  background-color: var(--accent-sm);
}

.lightButton:hover {
  color: var(--txt);
  background-color: var(--accent-lg);
}

select {
  font-weight: 400;
  display: flex;
  flex-direction: row;
  background-color: var(--accent-lg);
  border-radius: 5px;
  padding: 5px;

  cursor: pointer;

  border-style: unset;

  transition: 0.2s;
}

select:hover {
  background-color: var(--accent-sm);
  transition: 0.2s;
}

select:focus-visible {
  border: 0px none;
}

select[data-chosen] {
  background-color: var(--accent-md);
}

option {
  font-weight: 400;
}

input[type="checkbox"] {
  display: flex;

  padding: 10px 10px;

  justify-self: unset;
  background-color: var(--bkg);
  appearance: none;

  border: 1px solid var(--accent-sm);

  cursor: pointer;

  transition: 0.2s;
}

input[type="checkbox"]:checked {
  background-color: var(--accent);
  transition: 0.2s;
}

input[role="combobox"] {
  box-shadow: none;
  transition: 0.2s;
}

input[type="checkbox"]:hover {
  opacity: 0.7;
  transition: 0.2s;
}

input[type="checkbox"]:disabled {
  cursor: default;
  opacity: 0.5;

  transition: 0.2s;
}

input[type="date"] {
  padding: 0;
  text-indent: 5px;
}

td {
  font-size: 10pt;
  padding: 5px 10px;
}

th {
  font-weight: bold;
  font-size: 10pt;
  padding: 5px 10px;
}
/* ... */

